[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Robaaa <linkmash030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
asyncflows = "0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."asyncflows"]
actions = "project.my_actions"